# go

./: .bazelrc  .gitignore  .golangci.yml  BUILD.bazel  MODULE.bazel  go.work  go.work.sum
cue/: BUILD.bazel  CHANGELOG.md  decoder.go  decoder_test.go  doc.go  encoder.go  encoder_test.go  errors.go  errors_test.go  go.mod  go.sum  integration_test.go  loader.go  loader_test.go  validator.go  validator_test.go
cue/attributes/: BUILD.bazel  parse.go  parse_test.go  processor.go  processor_test.go  walker.go  walker_test.go
errors/: BUILD.bazel  CHANGELOG.md  README.md  benchmark_test.go  classification.go  classification_test.go  codes.go  constructors.go  constructors_test.go  context.go  context_test.go  doc.go  edge_cases_test.go  errors.go  example_test.go  go.mod  go.sum  helpers.go  helpers_test.go  integration_test.go  json.go  json_test.go  platform_error.go  platform_error_test.go  wrap.go  wrap_test.go
exec/: BUILD.bazel  CHANGELOG.md  README.md  command.go  doc.go  errors.go  exec.go  exec_test.go  go.mod  options.go  output.go  wrapper.go  wrapper_mock_test.go  wrapper_test.go
exec/mocks/: BUILD.bazel  executor.go
fs/billy/: BUILD.bazel  CHANGELOG.md  billy.go  billy_test.go  doc.go  file.go  file_test.go  go.mod  go.sum
fs/core/: BUILD.bazel  CHANGELOG.md  README.md  copy.go  doc.go  errors.go  errors_test.go  fstype_test.go  go.mod  interfaces.go  interfaces_test.go
fs/fstest/: BUILD.bazel  CHANGELOG.md  README.md  chroot_fs.go  file_capabilities.go  go.mod  go.sum  integration_test.go  manage_fs.go  metadata_fs.go  open_file_flags.go  read_fs.go  suite.go  symlink_fs.go  temp_fs.go  walk_fs.go  write_fs.go
fs/minio/: BUILD.bazel  CHANGELOG.md  config.go  file.go  file_test.go  go.mod  go.sum  integration_test.go  minio.go  minio_integration_test.go  minio_test.go
fs/minio/internal/errs/: BUILD.bazel  errs.go
fs/minio/internal/pathutil/: BUILD.bazel  pathutil.go
fs/minio/internal/types/: BUILD.bazel  types.go
fs/minio/internal/walk/: BUILD.bazel  walk.go
git/: BUILD.bazel  CHANGELOG.md  auth.go  auth_test.go  branch.go  branch_test.go  commit.go  commit_test.go  doc.go  errors.go  errors_test.go  fs.go  go.mod  go.sum  remote.go  remote_test.go  repository.go  repository_test.go  tag.go  tag_test.go  types.go  worktree.go  worktree_ops.go  worktree_test.go
git/cache/: BUILD.bazel  bare.go  bare_test.go  cache.go  cache_test.go  checkout.go  checkout_test.go  doc.go  gc.go  gc_test.go  index.go  index_test.go  integration_test.go  options.go  prune.go  prune_test.go  types.go  url.go  url_test.go
git/testutil/: BUILD.bazel  fixtures.go  memory.go  memory_test.go
github/: BUILD.bazel  README.md  client.go  doc.go  errors.go  github.go  go.mod  go.sum  issue.go  options.go  provider.go  pullrequest.go  repository.go  types.go  workflow.go
github/mocks/: BUILD.bazel  example_test.go  provider.go
github/providers/cli/: BUILD.bazel  cli.go  cli_test.go
github/providers/sdk/: BUILD.bazel  sdk.go  sdk_test.go
oci/: BUILD.bazel  CHANGELOG.md  DESIGN.md  README.md  TASKS.md  archive.go  archive_security_integration_test.go  archive_targz.go  archive_targz_helpers.go  archive_test.go  cache_integration_test.go  client.go  client_benchmark_test.go  client_signature_test.go  client_test.go  doc.go  errors.go  errors_test.go  go.mod  go.sum  integration_test.go  list.go  list_integration_test.go  list_test.go  options.go  options_test.go  security.go  security_fuzz_test.go  security_test.go  signature_interface.go  stargz.go  stargz_test.go
oci/examples/: README.md
oci/examples/advanced/: BUILD.bazel  go.mod  go.sum  main.go
oci/examples/advanced_caching/: BUILD.bazel  go.mod  main.go
oci/examples/basic/: BUILD.bazel  go.mod  main.go
oci/examples/basic_caching/: BUILD.bazel  go.mod  go.sum  main.go
oci/examples/basic_with_progress/: BUILD.bazel  go.mod  go.sum  main.go
oci/examples/cache_management/: BUILD.bazel  go.mod  main.go
oci/examples/custom_archiver/: BUILD.bazel  go.mod  main.go
oci/examples/custom_auth/: BUILD.bazel  go.mod  main.go
oci/examples/selective_extraction/: BUILD.bazel  go.mod  go.sum  main.go
oci/examples/signature_verification/: BUILD.bazel  README.md  go.mod  go.sum  main.go
oci/examples/signature_verification_advanced/: BUILD.bazel  README.md  go.mod  main.go
oci/internal/cache/: .tmp  BUILD.bazel  blob.go  blob_test.go  cache_debug.go  cache_debug_test.go  cache_monitoring_test.go  doc.go  errors.go  errors_test.go  eviction.go  eviction_test.go  index.go  index_test.go  interfaces.go  interfaces_test.go  logging.go  manager.go  manager_test.go  manifest.go  manifest_test.go  metrics.go  metrics_test.go  resolver.go  resolver_test.go  storage.go  storage_test.go  tags.go  tags_test.go  types.go  types_test.go  verification.go  verification_test.go
oci/internal/oras/: BUILD.bazel  cache.go  client.go  client_test.go  interfaces.go
oci/internal/oras/mocks/: BUILD.bazel  oras_client.go
oci/internal/testutil/: BUILD.bazel  archive_generator.go  archive_generator_test.go  benchmark_utils.go  benchmark_utils_test.go  coverage.go  coverage_test.go  malicious_archives.go  malicious_archives_test.go  mock_verifier.go  mock_verifier_test.go  registry.go  registry_test.go
oci/internal/validate/: BUILD.bazel  path.go  path_fuzz_test.go  path_test.go
oci/signature/: BUILD.bazel  README.md  REVIEW.md  benchmark_test.go  cosign_adapter.go  doc.go  example_test.go  go.mod  go.sum  integration_test.go  keyless.go  keys.go  options.go  policy.go  policy_hash.go  rekor.go  security_test.go  verifier.go  verifier_test.go
oci/tests/: archive_security_test.go  cache_http_range_integration_test.go  cache_test.go  client_test.go  list_test.go  stargz_range_test.go
