module(
    name = "go",
    version = "0.0.0",
)

# Bazel dependencies
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.40.0")

# Configure Go SDK from go.work
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Use the Go version from go.work
go_sdk.download(version = "1.25.3")

# Configure Go dependencies from go.work
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")

# Override Gazelle behavior for problematic dependencies
go_deps.gazelle_override(
    path = "github.com/sigstore/rekor-tiles",
    directives = [
        "gazelle:proto disable",  # Disable proto generation - envelope.proto doesn't exist
    ],
)
go_deps.gazelle_override(
    path = "github.com/cncf/xds/go",
    directives = [
        "gazelle:proto disable",  # Disable proto - missing BUILD files in udpa/type/v1
    ],
)
go_deps.gazelle_override(
    path = "github.com/google/certificate-transparency-go",
    directives = [
        "gazelle:proto disable",  # Disable proto - missing dependencies in configpb
    ],
)

# Direct dependencies will be auto-populated by `bazel mod tidy`
use_repo(
    go_deps,
    "com_github_containerd_stargz_snapshotter_estargz",
    "com_github_docker_distribution",
    "com_github_go_git_go_billy_v5",
    "com_github_go_git_go_git_v5",
    "com_github_gobwas_glob",
    "com_github_google_go_containerregistry",
    "com_github_google_go_github_v67",
    "com_github_jmgilman_go_errors",
    "com_github_jmgilman_go_exec",
    "com_github_jmgilman_go_fs_billy",
    "com_github_jmgilman_go_fs_core",
    "com_github_jmgilman_go_fs_fstest",
    "com_github_jmgilman_go_oci",
    "com_github_minio_minio_go_v7",
    "com_github_opencontainers_go_digest",
    "com_github_opencontainers_image_spec",
    "com_github_sigstore_cosign_v2",
    "com_github_sigstore_rekor",
    "com_github_sigstore_sigstore",
    "com_github_stretchr_testify",
    "com_github_testcontainers_testcontainers_go",
    "in_gopkg_yaml_v3",
    "land_oras_oras_go_v2",
    "org_cuelang_go",
    "org_golang_x_sync",
    # This will be populated by `bazel mod tidy`
)
