load("@rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix github.com/jmgilman/go/git

go_library(
    name = "git",
    srcs = [
        "auth.go",
        "branch.go",
        "commit.go",
        "doc.go",
        "errors.go",
        "fs.go",
        "remote.go",
        "repository.go",
        "tag.go",
        "types.go",
        "worktree.go",
        "worktree_ops.go",
    ],
    importpath = "github.com/jmgilman/go/git",
    visibility = ["//visibility:public"],
    deps = [
        "//errors",
        "//exec",
        "@com_github_go_git_go_billy_v5//:go-billy",
        "@com_github_go_git_go_billy_v5//osfs",
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//config",
        "@com_github_go_git_go_git_v5//plumbing",
        "@com_github_go_git_go_git_v5//plumbing/cache",
        "@com_github_go_git_go_git_v5//plumbing/object",
        "@com_github_go_git_go_git_v5//plumbing/transport",
        "@com_github_go_git_go_git_v5//plumbing/transport/http",
        "@com_github_go_git_go_git_v5//plumbing/transport/ssh",
        "@com_github_go_git_go_git_v5//storage/filesystem",
    ],
)

go_test(
    name = "git_test",
    srcs = [
        "auth_test.go",
        "branch_test.go",
        "commit_test.go",
        "errors_test.go",
        "remote_test.go",
        "repository_test.go",
        "tag_test.go",
        "worktree_test.go",
    ],
    embed = [":git"],
    deps = [
        "//errors",
        "@com_github_go_git_go_billy_v5//:go-billy",
        "@com_github_go_git_go_billy_v5//memfs",
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//config",
        "@com_github_go_git_go_git_v5//plumbing",
        "@com_github_go_git_go_git_v5//plumbing/cache",
        "@com_github_go_git_go_git_v5//plumbing/object",
        "@com_github_go_git_go_git_v5//plumbing/transport",
        "@com_github_go_git_go_git_v5//plumbing/transport/http",
        "@com_github_go_git_go_git_v5//storage/filesystem",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
