load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cache",
    srcs = [
        "bare.go",
        "cache.go",
        "checkout.go",
        "doc.go",
        "gc.go",
        "index.go",
        "options.go",
        "prune.go",
        "types.go",
        "url.go",
    ],
    importpath = "github.com/jmgilman/go/git/cache",
    visibility = ["//visibility:public"],
    deps = [
        "//git",
        "@com_github_go_git_go_billy_v5//:go-billy",
        "@com_github_go_git_go_billy_v5//osfs",
        "@com_github_go_git_go_billy_v5//util",
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//plumbing",
        "@com_github_go_git_go_git_v5//plumbing/cache",
        "@com_github_go_git_go_git_v5//storage/filesystem",
    ],
)

go_test(
    name = "cache_test",
    srcs = [
        "bare_test.go",
        "cache_test.go",
        "checkout_test.go",
        "gc_test.go",
        "index_test.go",
        "integration_test.go",
        "prune_test.go",
        "url_test.go",
    ],
    embed = [":cache"],
    deps = [
        "//git",
        "@com_github_go_git_go_billy_v5//:go-billy",
        "@com_github_go_git_go_billy_v5//memfs",
        "@com_github_go_git_go_billy_v5//osfs",
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//plumbing",
        "@com_github_go_git_go_git_v5//plumbing/object",
    ],
)
