load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "testutil",
    srcs = [
        "fixtures.go",
        "memory.go",
    ],
    importpath = "github.com/jmgilman/go/git/testutil",
    visibility = ["//visibility:public"],
    deps = [
        "//git",
        "@com_github_go_git_go_billy_v5//:go-billy",
        "@com_github_go_git_go_billy_v5//memfs",
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//plumbing/object",
    ],
)

go_test(
    name = "testutil_test",
    srcs = ["memory_test.go"],
    embed = [":testutil"],
    deps = [
        "//git",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
