load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mocks",
    srcs = ["provider.go"],
    importpath = "github.com/jmgilman/go/github/mocks",
    visibility = ["//visibility:public"],
    deps = ["//github"],
)

go_test(
    name = "mocks_test",
    srcs = ["example_test.go"],
    deps = [
        ":mocks",
        "//github",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
