load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sdk",
    srcs = ["sdk.go"],
    importpath = "github.com/jmgilman/go/github/providers/sdk",
    visibility = ["//visibility:public"],
    deps = [
        "//errors",
        "//github",
        "@com_github_google_go_github_v67//github",
    ],
)

go_test(
    name = "sdk_test",
    srcs = ["sdk_test.go"],
    embed = [":sdk"],
    deps = [
        "//errors",
        "//github",
        "@com_github_google_go_github_v67//github",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
