load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "advanced_lib",
    srcs = ["main.go"],
    importpath = "github.com/jmgilman/go/oci/examples/advanced",
    visibility = ["//visibility:private"],
    deps = ["//oci"],
)

go_binary(
    name = "advanced",
    embed = [":advanced_lib"],
    visibility = ["//visibility:public"],
)
