load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "advanced_caching_lib",
    srcs = ["main.go"],
    importpath = "github.com/jmgilman/go/oci/examples/advanced_caching",
    visibility = ["//visibility:private"],
    deps = ["//oci"],
)

go_binary(
    name = "advanced_caching",
    embed = [":advanced_caching_lib"],
    visibility = ["//visibility:public"],
)
