load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "basic_lib",
    srcs = ["main.go"],
    importpath = "github.com/jmgilman/go/oci/examples/basic",
    visibility = ["//visibility:private"],
    deps = ["//oci"],
)

go_binary(
    name = "basic",
    embed = [":basic_lib"],
    visibility = ["//visibility:public"],
)
