load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "basic_caching_lib",
    srcs = ["main.go"],
    importpath = "github.com/jmgilman/go/oci/examples/basic_caching",
    visibility = ["//visibility:private"],
    deps = ["//oci"],
)

go_binary(
    name = "basic_caching",
    embed = [":basic_caching_lib"],
    visibility = ["//visibility:public"],
)
