load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "custom_archiver_lib",
    srcs = ["main.go"],
    importpath = "github.com/jmgilman/go/oci/examples/custom_archiver",
    visibility = ["//visibility:private"],
    deps = ["//oci"],
)

go_binary(
    name = "custom_archiver",
    embed = [":custom_archiver_lib"],
    visibility = ["//visibility:public"],
)
