load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "custom_auth_lib",
    srcs = ["main.go"],
    importpath = "github.com/jmgilman/go/oci/examples/custom_auth",
    visibility = ["//visibility:private"],
    deps = [
        "//oci",
        "@land_oras_oras_go_v2//registry/remote/auth",
    ],
)

go_binary(
    name = "custom_auth",
    embed = [":custom_auth_lib"],
    visibility = ["//visibility:public"],
)
