load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "selective_extraction_lib",
    srcs = ["main.go"],
    importpath = "github.com/jmgilman/go/oci/examples/selective_extraction",
    visibility = ["//visibility:private"],
    deps = ["//oci"],
)

go_binary(
    name = "selective_extraction",
    embed = [":selective_extraction_lib"],
    visibility = ["//visibility:public"],
)
