load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "signature_verification_lib",
    srcs = ["main.go"],
    importpath = "github.com/jmgilman/go/oci/examples/signature_verification",
    visibility = ["//visibility:private"],
    deps = [
        "//oci",
        "//oci/signature",
    ],
)

go_binary(
    name = "signature_verification",
    embed = [":signature_verification_lib"],
    visibility = ["//visibility:public"],
)
